[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.7",
    "faiss-cpu>=1.11.0",
    "google-generativeai>=0.8.5",
    "groq>=0.23.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.16",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "nltk>=3.9.1",
    "openai>=1.76.2",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.6",
    "streamlit>=1.45.0",
    "tiktoken>=0.9.0",
]
